--- a/app/src/main/res/layout/item_word.xml
+++ b/app/src/main/res/layout/item_word.xml
@@ -10,13 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dragEdge="right"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:mode="normal">
 
         <!-- Your secondary layout here -->
         <LinearLayout
             android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_height="44dp"
             android:weightSum="1">
 
             <!--<ImageButton
@@ -44,7 +45,6 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
             app:cardCornerRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,30 +70,34 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="start"
+                        android:gravity="start"
+                        android:paddingTop="7dp"
+                        android:paddingBottom="9dp"
                         android:layout_weight="0.8"
-                        android:padding="7dp"
                         android:textColor="#000000"
-                        android:textSize="25sp" />
+                        android:textSize="20sp" />
 
                     <TextView
                         android:id="@+id/flag_text"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.4"
+                        android:layout_weight="0.3"
                         android:background="#C35AB6FF"
                         android:gravity="center"
                         android:text="🇬🇧 🇺🇿"
-                        android:textSize="25sp" />
+                        android:textSize="20sp" />
 
                     <TextView
                         android:id="@+id/item_uz"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_gravity="start"
+                        android:layout_gravity="end"
                         android:layout_weight="0.8"
-                        android:padding="7dp"
+                        android:gravity="end"
+                        android:paddingTop="7dp"
+                        android:paddingBottom="9dp"
                         android:textColor="#000000"
-                        android:textSize="25sp" />
+                        android:textSize="20sp" />
 
                 </LinearLayout>
 
